tests/integration/cli/tests/snapshots/snapshot__snapshot_bash.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": null,
    "wasm_hash": "34124ab56a8a69bc5964b05748e052d8",
    "use_packages": [],
    "cli_args": [],
    "stdin": [
      101,
      99,
      104,
      111,
      32,
      104,
      101,
      108,
      108,
      111
    ],
    "debug_output": false,
    "enable_threads": true
  },
  "result": {
    "Success": {
      "stdout": "hello\n",
      "stderr": "34124ab56a8a69bc5964b05748e052d8.wasm-5.1# echo hello\n34124ab56a8a69bc5964b05748e052d8.wasm-5.1# exit\n",
      "exit_code": 0
    }
  }
}
