tests/integration/cli/tests/snapshots/snapshot__snapshot_bash_bash.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_bash_bash",
    "use_packages": [
      "wasmer/bash"
    ],
    "include_webcs": [],
    "cli_args": [],
    "stdin_hash": "eb83da76ee5fbab28288ecf6385c69db",
    "enable_threads": true,
    "enable_network": false
  },
  "result": {
    "Success": {
      "stdout": "hi\nhi2\n",
      "stderr": "",
      "exit_code": 0
    }
  }
}
