tests/integration/cli/tests/snapshots/snapshot__snapshot_bash_cd_ls.snap
---
source: tests/integration/cli/tests/snapshot.rs
assertion_line: 1161
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_bash_cd_ls",
    "use_packages": [
      "wasmer/bash"
    ],
    "include_webcs": [],
    "cli_args": [],
    "stdin_hash": "862caddcc944cee7b673a57ec2f866e5",
    "enable_threads": true,
    "enable_network": false
  },
  "result": {
    "Success": {
      "stdout": "'['\t     csplit\t fmt\t  nl\t     realpath\t sort\t    uname\n arch\t     cut\t fold\t  nohup\t     rm\t\t split\t    unexpand\n b2sum\t     date\t head\t  nproc\t     rmdir\t sum\t    uniq\n base32\t     dd\t\t hostid\t  numfmt     seq\t tac\t    unlink\n base64\t     dir\t join\t  od\t     sh\t\t tail\t    vdir\n basename    dircolors\t link\t  paste\t     sha1sum\t tee\t    wasmer\n basenc\t     dirname\t ln\t  pathchk    sha224sum\t test\t    wc\n bash\t     echo\t ls\t  pr\t     sha256sum\t touch\t    yes\n cat\t     env\t md5sum\t  printenv   sha384sum\t tr\n cksum\t     expand\t mkdir\t  printf     sha512sum\t true\n comm\t     expr\t mktemp\t  ptx\t     shred\t truncate\n coreutils   factor\t mv\t  pwd\t     shuf\t tsort\n cp\t     false\t nice\t  readlink   sleep\t tty\n",
      "stderr": "test.wasm-5.1# test.wasm-5.1# test.wasm-5.1# exit\n",
      "exit_code": 0
    }
  }
}
