tests/integration/cli/tests/snapshots/snapshot__snapshot_bash_echo.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_bash_echo",
    "use_packages": [],
    "include_webcs": [],
    "cli_args": [],
    "stdin_hash": "664d0430ee33458602e580520841a2d4",
    "enable_threads": true,
    "enable_network": false
  },
  "result": {
    "Success": {
      "stdout": "hello\n",
      "stderr": "",
      "exit_code": 0
    }
  }
}
