tests/integration/cli/tests/snapshots/snapshot__snapshot_bash_ls.snap
---
source: tests/integration/cli/tests/snapshot.rs
assertion_line: 1148
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_bash_ls",
    "use_packages": [
      "wasmer/coreutils"
    ],
    "include_webcs": [],
    "cli_args": [],
    "stdin_hash": "ceb5d83a0368a10c813f8e05c42a3a7d",
    "enable_threads": true,
    "enable_network": false
  },
  "result": {
    "Success": {
      "stdout": "bin  dev  etc  opt  tmp\t usr\n",
      "stderr": "test.wasm-5.1# test.wasm-5.1# exit\n",
      "exit_code": 0
    }
  }
}
