tests/integration/cli/tests/snapshots/snapshot__snapshot_bash_pipe.snap
---
source: tests/integration/cli/tests/snapshot.rs
assertion_line: 1181
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_bash_pipe",
    "use_packages": [
      "wasmer/coreutils"
    ],
    "include_webcs": [],
    "cli_args": [],
    "stdin_hash": "d83523479d9f84e9f94230d5aed27347",
    "enable_threads": true,
    "enable_network": false
  },
  "result": {
    "Success": {
      "stdout": "hello\n",
      "stderr": "test.wasm-5.1# test.wasm-5.1# exit\n",
      "exit_code": 0
    }
  }
}
