tests/integration/cli/tests/snapshots/snapshot__snapshot_bash_python.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_bash_python",
    "use_packages": [
      "wasmer/coreutils"
    ],
    "include_webcs": [
      {
        "name": "sha256:c03ebe0946e66edf598fd7a1f192101f60e4e9c0095aecd04e049989692bdcab"
      }
    ],
    "cli_args": [],
    "stdin_hash": "de8f097504d2cb5712620329804740b1",
    "enable_threads": true,
    "enable_network": false
  },
  "result": {
    "Success": {
      "stdout": "10\n",
      "stderr": "test.wasm-5.1# test.wasm-5.1# exit\n",
      "exit_code": 0
    }
  }
}
