tests/integration/cli/tests/snapshots/snapshot__snapshot_catsay.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_catsay",
    "use_packages": [],
    "cli_args": [],
    "stdin": [
      109,
      101,
      111,
      111,
      111,
      119,
      119
    ],
    "debug_output": false,
    "enable_threads": true,
    "enable_network": false,
    "http_request": null
  },
  "result": {
    "Success": {
      "stdout": " _________ \n< meoooww >\n --------- \n  \\                              _\n   \\                            | \\\n    \\                           | |\n     \\                          | |\n      \\    |\\                   | |\n       \\  /, ~\\                / /\n         X     `-.....-------./ /\n          ~-. ~  ~              |\n             \\             /    |\n              \\  /_     ___\\   /\n              | /\\ ~~~~~   \\ |\n              | | \\        || |\n              | |\\ \\       || )\n             (_/ (_/      ((_/\n",
      "stderr": "",
      "exit_code": 0
    }
  }
}
