tests/integration/cli/tests/snapshots/snapshot__snapshot_cowsay.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_cowsay",
    "use_packages": [],
    "cli_args": [],
    "stdin": [
      98,
      108,
      97,
      104,
      10
    ],
    "debug_output": false,
    "enable_threads": true,
    "enable_network": false,
    "http_request": null
  },
  "result": {
    "Success": {
      "stdout": " ______\n< blah >\n ------\n        \\   ^__^\n         \\  (oo)\\_______\n            (__)\\       )\\/\\\n               ||----w |\n                ||     ||\n",
      "stderr": "",
      "exit_code": 0
    }
  }
}
